nullaway_error_dea9522e-c44d-4cc8-a635-fac63402372f.txt
/home/nima/Developer/nullness-benchmarks/conductor/core/src/main/java/com/netflix/conductor/model/TaskModel.java:67: error: [NullAway] @NonNull field taskType not initialized
  private String taskType;
                 ^
    (see http://t.uber.com/nullaway )
